--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
     <div class="coins">
     </div>
+    <script src="coins.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
