--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Coins</title>
+    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon" />
 </head>
 <body>
     <div class="coins">
